added drosophila c9orf72 drosophila science 0905

--- a/2.html
+++ b/2.html
@@ -67,24 +67,8 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Newest research
+                    ALS news
                 </h1>
-
-                <!-- First Blog Post -->
-
-                <article>
-                <h2>
-                Telomerase Expression in ALS
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
-                <p>Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
-                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls.</p>
-                <a class="btn btn-danger" href="nature2108.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <hr>
-              </article>
 
                 <article>
                 <h2>
@@ -100,50 +84,13 @@
                 <hr>
               </article>
 
-                <!-- Second Blog Post
-
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>-->
-
-                <!-- Third Blog Post
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article> -->
-
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="previous">
                         <a href="#">&larr; Older</a>
                     </li>
                     <li class="next">
-                        <a href="#">Newer &rarr;</a>
+                        <a href="index.html">Newer &rarr;</a>
                     </li>
                 </ul>
 
@@ -152,22 +99,39 @@
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
-              <div class="well text-center">
-                <p class="lead">
-                  Don't want to miss updates? Please click the below button!
-                </p>
-                <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
-              </div>
+               <div class="well text-center">
+                 <p class="lead">
+                   Don't want to miss updates? Please click the below button!
+                 </p>
+                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
+               </div>
+
+               <!--<div class="well">
+                   <h4>Blog Search</h4>
+                   <div class="input-group">
+                     <script>
+                     (function() {
+                       var cx = '011906290031035704904:-o-3j3gb-bi';
+                       var gcse = document.createElement('script');
+                       gcse.type = 'text/javascript';
+                       gcse.async = true;
+                       gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                           '//www.google.com/cse/cse.js?cx=' + cx;
+                       var s = document.getElementsByTagName('script')[0];
+                       s.parentNode.insertBefore(gcse, s);
+                     })();
+                   </script>
+                   <gcse:search></gcse:search>
+                   </div>
+               </div>-->
 
                <div class="panel panel-default">
                  <div class="panel-heading">
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="science0905.html">1. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-                   <li class="list-group-item"><a href="nature2108.html">2. Telomerase Expression in ALS </a></li>
-                   <li class="list-group-item"><a href="neuron2002.html">3. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">4. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                    <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">4. </a></li>
@@ -176,6 +140,7 @@
                </div>
 
                 <!-- Blog Categories Well -->
+                                <!-- Blog Categories Well -->
                 <div class="well">
                     <h4>Blog Categories</h4>
                     <div class="row">
@@ -229,6 +194,7 @@
 </div>
 
 
+
                 <!-- Side Widget Well -->
 
             </div>
@@ -268,6 +234,7 @@
   ga('send', 'pageview');
 
 </script>
+
 </body>
 
 </html>
