--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
 
                 <article>
                 <h2>
+                C9orf72 repeat expansions cause neurodegeneration in Drosophila
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
+                <p>In a study published on September 5, 2014 London researchers found that pure C9orf72 GGGGCC repeats, but not stop codon interrupted RNA only repeats in Drosophila cause neurodegeneration</p>
+                <a class="btn btn-danger" href="science0905.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+
+                <hr>
+              </article>
+
+                <article>
+                <h2>
                 Telomerase Expression in ALS
 
                 </h2>
@@ -98,43 +112,10 @@
                 <hr>
               </article>
 
-
-                <article>
-                <h2>
-                Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
-
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
-                <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
-                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>
-
-                <!-- Third Blog Post
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article> -->
-
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="previous">
-                        <a href="#">&larr; Older</a>
+                        <a href="2.html">&larr; Older</a>
                     </li>
                     <li class="next">
                         <a href="#">Newer &rarr;</a>
@@ -177,8 +158,10 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+                   <li class="list-group-item"><a href="science0905.html">1. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+                   <li class="list-group-item"><a href="nature2108.html">2. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">3. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">4. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                    <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">3. </a></li>
                    <li class="list-group-item"><a href="singlepost.html">4. </a></li>
