--- a/science0905.html
+++ b/science0905.html
@@ -98,7 +98,7 @@
                 </ul>
                 </p>
                 <p>The team of scientist generated a sequence containing the repeat expansion and a 6 base pair interruption containing one stop codon in the sense and the antisense direction every 12 GGGGCC repeats (a stop codon for all 6 frames)
-                  They also generated a stop codon RNA only repeat equivalent in length to the pure repeat and longer rnA only repeats up to ~288 GGGGCC repeats. They expressed the constructs in human neuroblastoma cell line and found that the formation
+                  They also generated a stop codon RNA only repeat equivalent in length to the pure repeat and longer RNA only repeats up to ~288 GGGGCC repeats. They expressed the constructs in human neuroblastoma cell line and found that the formation
                   of RNA aggregates was dependent on length for both pure and RNA only repeats. </p>
                 <p> Next, they generated lines of Drosophila carrying pure and RNA only repeats. Both pure and RNA only repeats generated RNA aggregates in Drosophila. They found that pure repeats generated dipeptide repeat proteins (DPR) [a dipeptide is a molecule that contains either to amino acids joined by a single peptide bond or one amino acid with two peptide bonds]
                 and the RNA only repeats did not. Expression of pure repeats in the eye led to eye neurodegeneration, while RNA only repeats had no effect. DPR proteins were blamed for the toxicity. </p>
