fixed link to my CV

--- a/editorial.html
+++ b/editorial.html
@@ -70,14 +70,14 @@
                     Editorial
                 </h1>
 
-                <a href="cv.mariachavez.co"><h2>Maria Chavez</h2></a>
+                <a href="http://cv.mariachavez.co"><h2>Maria Chavez</h2></a>
                 <p>My name is Maria Chavez and I am a 16 year old ALS researcher from Guatemala. I started researching ALS when I was 13, 2 years after someone I know was diagnosed with ALS. Since then I've focused my efforts in understanding the disease, and I want to help others understand it too; which is the reason behind starting this blog.</p>
                 <hr>
 
                 <!-- First Blog Post -->
 
             <!-- Blog Sidebar Widgets Column -->
-  
+
         <!-- /.row -->
 
         <hr>
