added prolifin 1 stress granules post

--- a/2.html
+++ b/2.html
@@ -72,6 +72,19 @@
 
                 <article>
                 <h2>
+                Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 26, 2014 at 6:00 PM</p>
+                <p>In a study published in early 2013, researchers from the Mayo Clinic found that C9RANT aggregates resulting from non-ATG (RAN) translation form in neurons containing the GGGGCC repeat expansion in C9orf72, which is the most common genetic cause of ALS and c9FTD. </p>
+                <a class="btn btn-danger" href="neuron2002.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr>
+              </article>
+
+                <article>
+                <h2>
                 Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
 
                 </h2>
@@ -130,12 +143,11 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="neuron2002.html">1. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">2. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-                   <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">3. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">4. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
+                   <li class="list-group-item"><a href="jneurosci0611.html">1. Profilin 1 is associated with stress granules </a></li>
+                   <li class="list-group-item"><a href="science0905.html">2. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+                   <li class="list-group-item"><a href="nature2108.html">3. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">4. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">5. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  </ul>
                </div>
 
