--- a/jneurosci0611.html
+++ b/jneurosci0611.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Telomerase Expression in ALS
+    <title>Profilin 1 is associated with stress granules
         </title>
 
     <!-- Bootstrap Core CSS -->
@@ -74,7 +74,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h2>Telomerase Expression in ALS</h2>
+                <h2>Profilin 1 is associated with stress granules</h2>
 
                 <!-- Author -->
                 <p class="lead">
@@ -84,21 +84,20 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 1, 2014 at 1:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 17, 2014 at 3:10 PM</p>
 
 
                 <!-- Post Content -->
-                <p class="lead">Telomerase has been linked to several neurological disorders. Human telomerase reverse transcriptase (hTERT) expression had never been characterized in ALS.
-                In a study plublished on August 21 on the Journal of Human Genetics, a team of researchers from Italy characterized telomerase in blood samples and spinal cord from 50 ALS patients and 50 controls. </p>
-                <p>Telomerase is an enzyme capable of reverse transcribing DNA. It is required for complete replication of telomeres. Telomerase expression is low in normal human cells, but upregulated in embryonic cells, adult male germ cells, stem cells, proliferating tissues and human malignancies.
-                Telomerase also has a regulatory role in gene expression. </p>
-                <p>Telomeres have largely been investigated for their roles in cancer, and its dysfunction has also shown to play a role in lung disease and neurological disfunction.</p>
-                <p>In a previous study in stem cells derived from ALS patients telomerase activity was 106 fold lower than glioblastoma tumor cells, but telmoerase activity was not compared to healthy controls. Interestingly, AGS-499 increases telomerase activity and expression in spinal cord and delayed the progression of ALS in SOD1 transgenic mice and increased survival by 60%.</p>
-                <p>In post mortem tissue from sALS patients hTERT expression was 96% lower than in controls. ALS leuhocytes also showed a 5-6x decrease in mTERt RNA transcript expression compared to controls. </p>
-                <p>p53 and p21 expression was overexpressed compared to controls, and correlated to level of hTERT mRNA in ALS</p>
-                <p>The telomere length was 15% lower in sALS patients than in controls, which is probably a consequence of inactive telomerase; as telomere length was correlated to mRNA expression of hTERT in leukocytes</p>
-                <p>Summary: telomerase activity was significantly decreased in sALS spinal cord and leukocytes. It has been suggested that the role of telomerase is to support genome instability and be neuroprotective, so the lack of hTERT expression could be required for neurodegeneration. Since AGS-499 increases lifespan in SOD1 mice, it can be concluded that the lack of telomerase contributes to neuronal death in sALS.</p>
-                <p>De Felice, B., Annunziata, A., Fiorentino, G., Manfellotto, F., D’Alessandro, R., Marino, R., … Biffali, E. (2014). Telomerase expression in amyotrophic lateral sclerosis (ALS) patients. Journal of Human Genetics, (July), 1–7. doi:10.1038/jhg.2014.72</p>
+                <p class="lead">Mutations in the gene encoding profilin 1 are a cause of fALS, but the mechanisms through which these mutations cause ALS are unknonw.
+                In a study published in June on The Journal of Neuroscience, a team of researchers from Stanford University used yeast to try to gain a better understanding of the pathogenic mechanism of the mutations.</p>
+                <p>Profilin 1 is an actin binding protein that regulates actin polymerization. In 2012 the gene was found to be a cause of fALS. </p>
+                <p>The team of scientist expressed ALS-linked profilin 1 mutants in yeast. They found that the mutations cause a loss of function. Two mutations affected expression levels and protein stability compared to wild type. </p>
+                <p>Next they tested if the ALS-linked profilin 1 proteins caused a toxic gain of function. No toxicity was observed with profilin 1 variant overexpression, suggesting there is not a toxic gain of function mechanism.</p>
+                <p>Afterwards they performed an unbiested GWAS screen to identify gene deletions that became lethal when combined with the profilin 1 deletion. They identified 127 gene deletions that were lethal/sick in combination with Pfy1, including 6 of the 7 genes that regulate protein urmylation (attachment of ubiquitin like protein URM1 to another protein. This process might be enhanced by oxidative stress), and several genes encoding members of dynein and dynactin complexes.  </p>
+                <p>A lot of genes encoding stress granule associated proteins were also found to interact with Pfy1 in the lethal screen. Notably, Pbp1 was found to interact with Pfy1. Pbp1 is a modifier of yeast stress granule formation (the yeast ortholog of ataxin 2) </p>
+                <p>Since a role for profilin 1 in stress granules had not been reported previously, they checked whether profilin 1 could associate with stress granules in human cells. They found prominent colocalization to profilin 1 with ataxin 2 positive stress granules in two independent human cell lines with 3 different stressors and 3 different stress granule markers. They checked whether profilin 1 and 2 associate with stress granules in neurons, and they found that both profilin 1 and 2 colocalize with ataxin 2 positive neuronal stress granules.</p>
+                <p>Next they checked whether ALS linked mutations in profilin 1 alter its ability to be cleared from stress granules. They found that profilin 1 may promote stress granule assembly and that overexpression of profilin 1 may cause a gain of function and.or dominant negative toxicity. They also found that profilin 1 is not required for stress granule formation in response to heat shock stress. </p>
+                <p>Figley, M. D., Bieri, G., Kolaitis, R.-M., Taylor, J. P., & Gitler, A. D. (2014). Profilin 1 associates with stress granules and ALS-linked mutations alter stress granule dynamics. The Journal of Neuroscience : The Official Journal of the Society for Neuroscience, 34(24), 8083–97. doi:10.1523/JNEUROSCI.0543-14.2014</p>
                 <hr>
 
                 <!-- Blog Comments -->
