--- a/pfy1.html
+++ b/pfy1.html
@@ -67,60 +67,23 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Biomarkers
+                    PFY1
                 </h1>
 
-                <!-- First Blog Post -->
-                <article>
-                <h2>
-                Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion
+            <article>
+              <h2>
+              Profilin 1 is associated with stress granules
 
-                </h2>
-                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
-                <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
-                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+              </h2>
+              <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+              </p>
+              <p><span class="glyphicon glyphicon-time"></span> Posted on September 17, 2014 at 3:10 PM</p>
+              <p>Mutations in the gene encoding profilin 1 are a cause of fALS, but the mechanisms through which these mutations cause ALS are unknonw.
+              In a study published in June on The Journal of Neuroscience, a team of researchers from Stanford University used yeast to try to gain a better understanding of the pathogenic mechanism of the mutations.</p>
+              <a class="btn btn-danger" href="jneurosci0611.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
-                <hr>
-              </article>
-
-                <!-- Second Blog Post
-
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article>-->
-
-                <!-- Third Blog Post
-                <article>
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-
-                <hr>
-              </article> -->
+              <hr>
+            </article>
 
                 <!-- Pager -->
                 <ul class="pager">
@@ -143,6 +106,7 @@
                 </p>
                 <a class="btn btn-danger btn-lg" href="http://eepurl.com/2fBqL" style="color: #FFFFFF">Subscribe to my feed</a>
               </div>
+
 
                <div class="panel panel-default">
                  <div class="panel-heading">
@@ -250,6 +214,7 @@
   ga('send', 'pageview');
 
 </script>
+
 </body>
 
 </html>
