--- a/newest.html
+++ b/newest.html
@@ -72,6 +72,21 @@
 
                 <!-- First Blog Post -->
 
+              <article>
+                <h2>
+                Profilin 1 is associated with stress granules
+
+                </h2>
+                <p class="lead"> by <a href="editorial.html">Maria Chavez</a>
+                </p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 17, 2014 at 3:10 PM</p>
+                <p>Mutations in the gene encoding profilin 1 are a cause of fALS, but the mechanisms through which these mutations cause ALS are unknonw.
+                In a study published in June on The Journal of Neuroscience, a team of researchers from Stanford University used yeast to try to gain a better understanding of the pathogenic mechanism of the mutations.</p>
+                <a class="btn btn-danger" href="jneurosci0611.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+
+                <hr>
+              </article>
+
                 <article>
                 <h2>
                 Telomerase Expression in ALS
@@ -164,14 +179,11 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                   <li class="list-group-item"><a href="science0905.html">1. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-                   <li class="list-group-item"><a href="nature2108.html">2. Telomerase Expression in ALS </a></li>
-                   <li class="list-group-item"><a href="neuron2002.html">3. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                   <li class="list-group-item"><a href="neuron1408.html">4. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-                   <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">3. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">4. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
+                   <li class="list-group-item"><a href="jneurosci0611.html">1. Profilin 1 is associated with stress granules </a></li>
+                   <li class="list-group-item"><a href="science0905.html">2. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+                   <li class="list-group-item"><a href="nature2108.html">3. Telomerase Expression in ALS </a></li>
+                   <li class="list-group-item"><a href="neuron2002.html">4. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                   <li class="list-group-item"><a href="neuron1408.html">5. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  </ul>
                </div>
 
