--- a/smallMolecules.html
+++ b/smallMolecules.html
@@ -150,14 +150,11 @@
                    <h4>Latest Posts</h4>
                  </div>
                  <ul class="list-group">
-                  <li class="list-group-item"><a href="science0905.html">1. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
-                  <li class="list-group-item"><a href="nature2108.html">2. Telomerase Expression in ALS </a></li>
-                  <li class="list-group-item"><a href="neuron2002.html">3. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
-                  <li class="list-group-item"><a href="neuron1408.html">4. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
-                   <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">3. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">4. </a></li>
-                   <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
+                  <li class="list-group-item"><a href="jneurosci0611.html">1. Profilin 1 is associated with stress granules </a></li>
+                  <li class="list-group-item"><a href="science0905.html">2. C9orf72 repeat expansions cause neurodegeneration in Drosophila </a></li>
+                  <li class="list-group-item"><a href="nature2108.html">3. Telomerase Expression in ALS </a></li>
+                  <li class="list-group-item"><a href="neuron2002.html">4. Unconventional Translation of C9orf72 GGGGCC expansion generates insoluble polypeptides </a></li>
+                  <li class="list-group-item"><a href="neuron1408.html">5. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
                  </ul>
                </div>
 
