Added PFY1 as a tag

--- a/jneurosci0611.html
+++ b/jneurosci0611.html
@@ -184,6 +184,7 @@
                     <li><a href="smallMolecules.html">Small Molecules</a></li>
                     <li><a href="biomarkers.html">Biomarkers</a></li>
                     <li><a href="telomerase.html">Telomerase</a></li>
+                    <li><a href="pfy1.html">PFY1</a></li>
                     <!--<li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
