--- a/telomerase.html
+++ b/telomerase.html
@@ -198,6 +198,8 @@
                       <li><a href="c9orf72.html">C9ORF72</a></li>
                       <li><a href="smallMolecules.html">Small Molecules</a></li>
                       <li><a href="biomarkers.html">Biomarkers</a></li>
+                      <li><a href="telomerase.html">Telomerase</a></li>
+                      <li><a href="pfy1.html">PFY1</a></li>
                       <!--<li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
